[gd_scene load_steps=4 format=3 uid="uid://bo5vjvb1s1fyg"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_window/block_environment/g_block_schema/g_block/g_block.tscn" id="1_pendl"]
[ext_resource type="Script" path="res://scenes/block_window/block_environment/g_block_schema/block_begin/g_block_begin.gd" id="2_7df40"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_window/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="3_ebcp8"]

[node name="GBlockBegin" instance=ExtResource("1_pendl")]
script = ExtResource("2_7df40")

[node name="Type" parent="Control/MarginContainer/Content" index="1"]
text = "Начальный блок"

[node name="ActivateButton" type="Button" parent="Control/MarginContainer/Content" index="2"]
layout_mode = 2
text = "Начать"

[node name="MassActivationCheckbox" type="CheckBox" parent="Control/MarginContainer/Content" index="3"]
layout_mode = 2
button_pressed = true
text = "Активировать со всеми"

[node name="GBeginPoint" parent="BeginPoints" index="0" instance=ExtResource("3_ebcp8")]
position = Vector2(2, 70)

[connection signal="pressed" from="Control/MarginContainer/Content/ActivateButton" to="." method="_on_activate_button_pressed"]
